llvm-toolchain-snapshot (1:3.6~svn214390-1~exp1) experimental; urgency=medium

  * New snapshot release (3.5 => 3.6)
  * Refresh of the patches

 -- Sylvestre Ledru <sylvestre@debian.org>  Thu, 31 Jul 2014 08:42:35 +0200

llvm-toolchain-3.5 (1:3.5~+rc1-2) unstable; urgency=medium

  * Sync with 3.4 svn to retrieve some changes:
  * Replace $(CURDIR)/debian/tmp by a variable
  * Move the polly installation in the dh_auto_install rules instead
    of using *.install files. In llvm.org/apt/, I have to sometime disable
    polly
  * hurd-EIEIO-undef.diff: try to undef an errno.h to fix the ftbfs
  * clang-X suggests clang-X-doc (Closes: #755922)
  * Manage all files using .in mecanism. It will simplify the upgrade of
    version
  * Disable lldb for ppc64el. Thanks to Dimitri John Ledkov (Closes: #756380)
  * Fix the FTBFS under PowerPC. Thanks to Dimitri John Ledkov for the patch

 -- Sylvestre Ledru <sylvestre@debian.org>  Thu, 24 Jul 2014 11:42:56 +0200

llvm-toolchain-3.5 (1:3.5~+rc1-1) unstable; urgency=medium

  * First RC release of the 3.5 llvm toolchain
  * Apply lldb-kfreebsd.diff patch to fix FTBFS under KFreeBSD
    Thanks to Ed Maste

 -- Sylvestre Ledru <sylvestre@debian.org>  Wed, 23 Jul 2014 08:57:59 +0200

llvm-toolchain-snapshot (1:3.5~svn213451-1) unstable; urgency=medium

  * New snapshot release
  * If the version of gcc is too old, force the usage of gcc 4.8
  * Clang will now show the full version. Example: 3.5.0-svn213052-1~exp1

 -- Sylvestre Ledru <sylvestre@debian.org>  Sat, 19 Jul 2014 15:27:11 +0200

llvm-toolchain-snapshot (1:3.5~svn211669-2) unstable; urgency=medium

  * Remove useless dependency on g++
  * Use the option stable '-analyzer-config stable-report-filename=true'
    to the llvm scan-build reports

 -- Sylvestre Ledru <sylvestre@debian.org>  Sun, 29 Jun 2014 19:13:05 +0200

llvm-toolchain-snapshot (1:3.5~svn211669-1) unstable; urgency=medium

  * New snapshot release
  * Fix CVE-2014-2893 (Closes: #744817)