@@ -3,8 +3,14 @@ usr/lib/llvm-@LLVM_VERSION@/bin/opt*
 usr/lib/llvm-@LLVM_VERSION@/bin/macho-dump*
 usr/lib/llvm-@LLVM_VERSION@/bin/bugpoint*
 usr/lib/llvm-@LLVM_VERSION@/bin/llc*
+usr/lib/llvm-@LLVM_VERSION@/bin/obj2yaml
+usr/lib/llvm-@LLVM_VERSION@/bin/yaml2obj
+usr/lib/llvm-@LLVM_VERSION@/bin/verify-uselistorder
 usr/bin/llvm-*
 usr/bin/opt*
 usr/bin/macho-dump*
 usr/bin/bugpoint*
 usr/bin/llc*
+usr/bin/obj2yaml-*
+usr/bin/yaml2obj-*
+usr/bin/verify-uselistorder-*
