@@ -2,6 +2,7 @@ llvm-toolchain-snapshot (1:3.6~svn214390-1~exp1) experimental; urgency=medium
 
   * New snapshot release (3.5 => 3.6)
   * Refresh of the patches
+  * Install yaml2obj, obj2yaml & verify-uselistorder in llvm-3.6
 
  -- Sylvestre Ledru <sylvestre@debian.org>  Thu, 31 Jul 2014 08:42:35 +0200
 
